Configs/Chapter05/sws-svc-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: sws-svc-lb
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: http
  selector:
    app: sws
