Configs/Chapter05/sws-svc-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: sws-svc-np
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: sws
