Configs/Chapter05/sws-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sws-svc
spec:
  ports:
    - port: 80
      targetPort: http
  selector:
    app: sws
